[gd_scene load_steps=22 format=3 uid="uid://dt0cvw8hkkj1j"]

[ext_resource type="PackedScene" uid="uid://byq3hnd7q2r7a" path="res://player.tscn" id="1_0n3vm"]
[ext_resource type="Texture2D" uid="uid://dxd4v8tqod5va" path="res://super-bazza-bogan/block.png" id="1_h0vuo"]
[ext_resource type="Script" path="res://level_3.gd" id="1_jptxj"]
[ext_resource type="Texture2D" uid="uid://5mgvxklc8lhi" path="res://super-bazza-bogan/brick.png" id="2_4y0bl"]
[ext_resource type="Texture2D" uid="uid://ci43lmcbfl0mu" path="res://super-bazza-bogan/lvl2-block.png" id="3_b1ux6"]
[ext_resource type="Texture2D" uid="uid://dxbxbm4b6x737" path="res://super-bazza-bogan/lvl2-brick.png" id="4_107kb"]
[ext_resource type="Texture2D" uid="uid://dfm3d2yb553ku" path="res://super-bazza-bogan/flagpole.png" id="5_8fkx7"]
[ext_resource type="PackedScene" uid="uid://be3rk5uunupsv" path="res://questionblock.tscn" id="7_kv5kr"]
[ext_resource type="PackedScene" uid="uid://d4js4a2rqloyu" path="res://bullets_container.tscn" id="8_fqhje"]
[ext_resource type="PackedScene" uid="uid://bkaraswahql7" path="res://big_toad.tscn" id="9_gc0ye"]
[ext_resource type="PackedScene" uid="uid://vdohpn4wlxxt" path="res://coin.tscn" id="10_71yvd"]
[ext_resource type="PackedScene" uid="uid://d1t0pqtboyfn8" path="res://coin_gui.tscn" id="10_t73p1"]
[ext_resource type="AudioStream" uid="uid://bvx41twete4bl" path="res://Final Fantasy VII - Rap Remix (Instrumental).mp3" id="13_cs7eh"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_fddsd"]
texture = ExtResource("1_h0vuo")
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_jnkqb"]
texture = ExtResource("2_4y0bl")
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_m1ix7"]
texture = ExtResource("3_b1ux6")
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -8, 8, 8, 8, 8, -8)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_tskvu"]
texture = ExtResource("4_107kb")
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -8, -8, -8, -8, 8, 8, 8)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_1jmcv"]
texture = ExtResource("5_8fkx7")
texture_region_size = Vector2i(16, 176)
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-7.07107, 77.7817, 8, 72, 9, 87, -7.07107, 86.267)

[sub_resource type="TileSet" id="TileSet_ki7er"]
physics_layer_0/collision_layer = 1
sources/3 = SubResource("TileSetAtlasSource_fddsd")
sources/4 = SubResource("TileSetAtlasSource_jnkqb")
sources/5 = SubResource("TileSetAtlasSource_m1ix7")
sources/6 = SubResource("TileSetAtlasSource_tskvu")
sources/7 = SubResource("TileSetAtlasSource_1jmcv")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q8iaj"]
size = Vector2(2346, 94)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_4s4tg"]
radius = 8.0
height = 160.0

[node name="Level_3" type="Node2D"]
script = ExtResource("1_jptxj")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -8.0
offset_right = 2306.0
offset_bottom = 993.0
color = Color(0.0509804, 0.054902, 0.129412, 1)

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_ki7er")
format = 2
layer_0/tile_data = PackedInt32Array(2359296, 5, 0, 2424832, 5, 0, 2490368, 5, 0, 2555904, 5, 0, 2621440, 5, 0, 2359297, 5, 0, 2424833, 4, 0, 2490369, 5, 0, 2555905, 5, 0, 2621441, 5, 0, 2359298, 5, 0, 2424834, 5, 0, 2490370, 5, 0, 2555906, 5, 0, 2621442, 5, 0, 2359299, 5, 0, 2424835, 5, 0, 2490371, 5, 0, 2555907, 5, 0, 2621443, 5, 0, 2359300, 5, 0, 2424836, 5, 0, 2490372, 5, 0, 2555908, 5, 0, 2621444, 5, 0, 2359301, 5, 0, 2424837, 5, 0, 2490373, 5, 0, 2555909, 5, 0, 2621445, 5, 0, 2359302, 5, 0, 2424838, 5, 0, 2490374, 4, 0, 2555910, 5, 0, 2621446, 5, 0, 2359303, 5, 0, 2424839, 5, 0, 2490375, 5, 0, 2555911, 5, 0, 2621447, 5, 0, 2359304, 5, 0, 2424840, 5, 0, 2490376, 5, 0, 2555912, 5, 0, 2621448, 5, 0, 2359305, 5, 0, 2424841, 5, 0, 2490377, 5, 0, 2555913, 5, 0, 2621449, 5, 0, 2359308, 5, 0, 2424844, 5, 0, 2490380, 5, 0, 2555916, 5, 0, 2621452, 5, 0, 2359309, 5, 0, 2424845, 5, 0, 2490381, 5, 0, 2555917, 5, 0, 2621453, 5, 0, 2359310, 5, 0, 2424846, 5, 0, 2490382, 5, 0, 2555918, 5, 0, 2621454, 5, 0, 1376253, 5, 0, 1441789, 5, 0, 1507325, 5, 0, 1572861, 5, 0, 1638397, 5, 0, 1703933, 5, 0, 1769469, 5, 0, 1835005, 5, 0, 1900541, 5, 0, 1966077, 5, 0, 2031613, 5, 0, 2097149, 5, 0, 2162685, 5, 0, 2228221, 5, 0, 2293757, 5, 0, 2359293, 5, 0, 2424829, 5, 0, 2490365, 5, 0, 2555901, 5, 0, 2621437, 5, 0, 2686973, 5, 0, 1376254, 5, 0, 1441790, 5, 0, 1507326, 5, 0, 1572862, 5, 0, 1638398, 5, 0, 1703934, 5, 0, 1769470, 5, 0, 1835006, 5, 0, 1900542, 5, 0, 1966078, 5, 0, 2031614, 5, 0, 2097150, 5, 0, 2162686, 5, 0, 2228222, 5, 0, 2293758, 5, 0, 2359294, 5, 0, 2424830, 5, 0, 2490366, 5, 0, 2555902, 5, 0, 2621438, 5, 0, 2686974, 5, 0, 1376255, 5, 0, 1441791, 5, 0, 1507327, 5, 0, 1572863, 5, 0, 1638399, 5, 0, 1703935, 5, 0, 1769471, 5, 0, 1835007, 5, 0, 1900543, 5, 0, 1966079, 5, 0, 2031615, 5, 0, 2097151, 5, 0, 2162687, 5, 0, 2228223, 5, 0, 2293759, 5, 0, 2359295, 5, 0, 2424831, 5, 0, 2490367, 5, 0, 2555903, 5, 0, 2621439, 5, 0, 2686975, 5, 0, 2359313, 5, 0, 2424849, 5, 0, 2490385, 5, 0, 2555921, 5, 0, 2621457, 5, 0, 2359314, 5, 0, 2424850, 4, 0, 2490386, 5, 0, 2555922, 5, 0, 2621458, 5, 0, 2359315, 5, 0, 2424851, 5, 0, 2490387, 5, 0, 2555923, 5, 0, 2621459, 5, 0, 2162710, 4, 0, 2228246, 4, 0, 2293782, 4, 0, 2359318, 4, 0, 2424854, 4, 0, 2490390, 4, 0, 2555926, 5, 0, 2621462, 4, 0, 2162711, 4, 0, 2228247, 4, 0, 2293783, 4, 0, 2359319, 4, 0, 2424855, 4, 0, 2490391, 4, 0, 2555927, 4, 0, 2621463, 4, 0, 2162712, 4, 0, 2228248, 4, 0, 2293784, 5, 0, 2359320, 4, 0, 2424856, 4, 0, 2490392, 4, 0, 2555928, 4, 0, 2621464, 4, 0, 2162713, 4, 0, 2228249, 4, 0, 2293785, 4, 0, 2359321, 4, 0, 2424857, 4, 0, 2490393, 5, 0, 2555929, 4, 0, 2621465, 4, 0, 2621470, 5, 0, 2555935, 5, 0, 2490400, 5, 0, 2424865, 5, 0, 2359330, 5, 0, 2293795, 5, 0, 2228260, 5, 0, 2162725, 5, 0, 2097190, 5, 0, 2031655, 5, 0, 1966120, 5, 0, 1900585, 5, 0, 1835050, 5, 0, 1769515, 5, 0, 2621471, 4, 0, 2555936, 4, 0, 2490401, 4, 0, 2424866, 4, 0, 2359331, 4, 0, 2293796, 4, 0, 2228261, 4, 0, 2162726, 4, 0, 2097191, 4, 0, 2031656, 4, 0, 1966121, 4, 0, 1900586, 4, 0, 1835051, 4, 0, 2555934, 4, 0, 2490399, 4, 0, 2424864, 4, 0, 2359329, 4, 0, 2293794, 4, 0, 2228259, 4, 0, 2162724, 4, 0, 2097189, 4, 0, 2031654, 4, 0, 1966119, 4, 0, 1900584, 4, 0, 1835049, 4, 0, 1769514, 4, 0, 2424862, 4, 0, 2359327, 4, 0, 2293792, 4, 0, 2228257, 4, 0, 2162722, 4, 0, 2097187, 4, 0, 2031652, 4, 0, 1966117, 4, 0, 1900582, 4, 0, 1835047, 4, 0, 1769512, 4, 0, 2293790, 4, 0, 2228255, 4, 0, 2162720, 4, 0, 2097185, 4, 0, 2031650, 4, 0, 1966115, 4, 0, 1900580, 4, 0, 1835045, 4, 0, 1769510, 4, 0, 2162718, 4, 0, 2097183, 4, 0, 2031648, 4, 0, 1966113, 4, 0, 1900578, 4, 0, 1835043, 4, 0, 1769508, 4, 0, 2031646, 4, 0, 1966111, 4, 0, 1900576, 4, 0, 1835041, 4, 0, 1769506, 4, 0, 1900574, 4, 0, 1835039, 4, 0, 1769504, 4, 0, 1769502, 4, 0, 2621473, 4, 0, 2555938, 4, 0, 2490403, 4, 0, 2424868, 4, 0, 2359333, 4, 0, 2293798, 4, 0, 2228263, 4, 0, 2162728, 4, 0, 2097193, 4, 0, 2031658, 4, 0, 1966123, 4, 0, 2621475, 4, 0, 2555940, 4, 0, 2490405, 4, 0, 2424870, 4, 0, 2359335, 4, 0, 2293800, 4, 0, 2228265, 4, 0, 2162730, 4, 0, 2097195, 4, 0, 2621477, 4, 0, 2555942, 4, 0, 2490407, 4, 0, 2424872, 4, 0, 2359337, 4, 0, 2293802, 4, 0, 2228267, 4, 0, 2621479, 4, 0, 2555944, 4, 0, 2490409, 4, 0, 2424874, 4, 0, 2359339, 4, 0, 2621481, 4, 0, 2555946, 4, 0, 2490411, 4, 0, 2621483, 4, 0, 1966110, 5, 0, 1900575, 5, 0, 1835040, 5, 0, 1769505, 5, 0, 1835038, 5, 0, 1769503, 5, 0, 1769509, 5, 0, 1835044, 5, 0, 1900579, 5, 0, 1966114, 5, 0, 2031649, 5, 0, 2097184, 5, 0, 2162719, 5, 0, 2228254, 5, 0, 1769513, 5, 0, 1835048, 5, 0, 1900583, 5, 0, 1966118, 5, 0, 2031653, 5, 0, 2097188, 5, 0, 2162723, 5, 0, 2228258, 5, 0, 2293793, 5, 0, 2359328, 5, 0, 2424863, 5, 0, 2490398, 5, 0, 2621472, 5, 0, 2555937, 5, 0, 2490402, 5, 0, 2424867, 5, 0, 2359332, 5, 0, 2293797, 5, 0, 2228262, 5, 0, 2162727, 5, 0, 2097192, 5, 0, 2031657, 5, 0, 1966122, 5, 0, 1900587, 5, 0, 2031659, 5, 0, 2097194, 5, 0, 2162729, 5, 0, 2228264, 5, 0, 2293799, 5, 0, 2359334, 5, 0, 2424869, 5, 0, 2490404, 5, 0, 2555939, 5, 0, 2621474, 5, 0, 2621476, 5, 0, 2555941, 5, 0, 2490406, 5, 0, 2424871, 5, 0, 2359336, 5, 0, 2293801, 5, 0, 2228266, 5, 0, 2162731, 5, 0, 2293803, 5, 0, 2359338, 5, 0, 2424873, 5, 0, 2490408, 5, 0, 2555943, 5, 0, 2621478, 5, 0, 2621480, 5, 0, 2555945, 5, 0, 2490410, 5, 0, 2424875, 5, 0, 2555947, 5, 0, 2621482, 5, 0, 2359326, 5, 0, 2293791, 5, 0, 2228256, 5, 0, 2162721, 5, 0, 2097186, 5, 0, 2031651, 5, 0, 1966116, 5, 0, 1900581, 5, 0, 1835046, 5, 0, 1769511, 5, 0, 1769507, 5, 0, 1835042, 5, 0, 1900577, 5, 0, 1966112, 5, 0, 2031647, 5, 0, 2097182, 5, 0, 1835026, 3, 0, 1835025, 3, 0, 1835024, 3, 0, 1835023, 3, 0, 1835052, 5, 0, 1966124, 5, 0, 2097196, 5, 0, 2228268, 5, 0, 2359340, 5, 0, 2490412, 5, 0, 2621484, 5, 0, 2555948, 4, 0, 2424876, 4, 0, 2293804, 4, 0, 2162732, 4, 0, 2031660, 4, 0, 1900588, 4, 0, 1769516, 4, 0, 1441827, 3, 0, 1441831, 3, 0, 2621489, 3, 0, 2555953, 3, 0, 2490417, 3, 0, 2424881, 3, 0, 2359345, 3, 0, 2293809, 3, 0, 2228273, 3, 0, 2162737, 3, 0, 2097201, 3, 0, 2031665, 3, 0, 1966129, 3, 0, 1900593, 3, 0, 1835057, 3, 0, 1769521, 3, 0, 2621492, 3, 0, 2555956, 3, 0, 2490420, 3, 0, 2424884, 3, 0, 2359348, 3, 0, 2293812, 3, 0, 2228276, 3, 0, 2162740, 3, 0, 2097204, 3, 0, 2031668, 3, 0, 1966132, 3, 0, 1900596, 3, 0, 1835060, 3, 0, 1769524, 3, 0, 2621495, 3, 0, 2555959, 3, 0, 2490423, 3, 0, 2424887, 3, 0, 2359351, 3, 0, 2293815, 3, 0, 2228279, 3, 0, 2162743, 3, 0, 2097207, 3, 0, 2031671, 3, 0, 1966135, 3, 0, 1900599, 3, 0, 1835063, 3, 0, 1769527, 3, 0, 1769531, 5, 0, 1835067, 5, 0, 1900603, 5, 0, 1769532, 5, 0, 1835068, 5, 0, 1900604, 3, 0, 1769533, 5, 0, 1835069, 5, 0, 1900605, 3, 0, 1769534, 5, 0, 1835070, 4, 0, 1900606, 5, 0, 1769535, 5, 0, 1835071, 5, 0, 1900607, 5, 0, 1769536, 5, 0, 1835072, 5, 0, 1900608, 5, 0, 1769537, 5, 0, 1835073, 5, 0, 1900609, 5, 0, 1769538, 5, 0, 1835074, 5, 0, 1900610, 5, 0, 1769539, 4, 0, 1835075, 5, 0, 1900611, 5, 0, 1769540, 5, 0, 1835076, 5, 0, 1900612, 5, 0, 1769541, 5, 0, 1835077, 5, 0, 1900613, 5, 0, 1769542, 5, 0, 1835078, 5, 0, 1900614, 3, 0, 1769543, 5, 0, 1835079, 5, 0, 1900615, 4, 0, 1769544, 5, 0, 1835080, 5, 0, 1900616, 5, 0, 1966141, 3, 0, 2031677, 3, 0, 2097213, 3, 0, 2162749, 3, 0, 2228285, 3, 0, 2293821, 3, 0, 2359357, 3, 0, 2424893, 3, 0, 2490429, 3, 0, 2555965, 3, 0, 2621501, 3, 0, 1966150, 3, 0, 2031686, 3, 0, 2097222, 3, 0, 2162758, 3, 0, 2228294, 3, 0, 2293830, 3, 0, 2359366, 3, 0, 2424902, 3, 0, 2490438, 3, 0, 2555974, 3, 0, 2621510, 3, 0, 1966142, 3, 0, 1966143, 3, 0, 1966144, 3, 0, 1966145, 3, 0, 1966146, 3, 0, 1966147, 3, 0, 1966148, 3, 0, 1966149, 3, 0, 1769547, 3, 0, 1835084, 3, 0, 1900621, 3, 0, 1966158, 3, 0, 2031695, 6, 0, 2097232, 3, 0, 2162769, 3, 0, 2228306, 3, 0, 2293843, 3, 0, 2359380, 3, 0, 2424917, 3, 0, 1769548, 6, 0, 1835085, 6, 0, 1900622, 6, 0, 1966159, 6, 0, 2031696, 3, 0, 2097233, 6, 0, 2162770, 6, 0, 2228307, 6, 0, 2293844, 6, 0, 2359381, 6, 0, 1769549, 6, 0, 1835086, 6, 0, 1900623, 6, 0, 1966160, 6, 0, 2031697, 3, 0, 2097234, 6, 0, 2162771, 6, 0, 2228308, 6, 0, 2293845, 6, 0, 1835083, 3, 0, 1900620, 3, 0, 1966157, 3, 0, 2031694, 3, 0, 2097231, 6, 0, 2162768, 6, 0, 2228305, 3, 0, 2293842, 3, 0, 2359379, 3, 0, 2424916, 3, 0, 2490453, 3, 0, 2490443, 3, 0, 2424908, 3, 0, 2359373, 3, 0, 2293838, 3, 0, 2228303, 3, 0, 1966162, 3, 0, 1900627, 3, 0, 1835092, 3, 0, 1769557, 3, 0, 2424907, 3, 0, 2359372, 3, 0, 2293837, 3, 0, 2228302, 3, 0, 2162767, 6, 0, 1966161, 3, 0, 1900626, 3, 0, 1835091, 3, 0, 1769556, 3, 0, 2359371, 6, 0, 2293836, 6, 0, 2228301, 6, 0, 2162766, 6, 0, 1900625, 6, 0, 1835090, 6, 0, 1769555, 6, 0, 2490444, 6, 0, 2424909, 6, 0, 2359374, 6, 0, 2293839, 6, 0, 2228304, 6, 0, 2031698, 6, 0, 1966163, 6, 0, 1900628, 6, 0, 1835093, 6, 0, 2490452, 6, 0, 2424915, 6, 0, 2359378, 6, 0, 2293841, 6, 0, 2097230, 6, 0, 2031693, 6, 0, 1966156, 6, 0, 1900619, 6, 0, 2555979, 5, 0, 2555980, 5, 0, 2555981, 5, 0, 2555982, 5, 0, 2555983, 4, 0, 2555984, 4, 0, 2555985, 5, 0, 2555986, 5, 0, 2555987, 5, 0, 2555988, 5, 0, 2555989, 5, 0, 2621515, 5, 0, 2687051, 5, 0, 2621516, 5, 0, 2687052, 5, 0, 2621517, 5, 0, 2687053, 5, 0, 2621518, 5, 0, 2687054, 5, 0, 2621519, 4, 0, 2687055, 5, 0, 2621520, 5, 0, 2687056, 5, 0, 2621521, 5, 0, 2687057, 5, 0, 2621522, 5, 0, 2687058, 5, 0, 2621523, 5, 0, 2687059, 5, 0, 2621524, 5, 0, 2687060, 5, 0, 2621525, 5, 0, 2687061, 5, 0, 2490445, 5, 0, 2490446, 5, 0, 2490447, 5, 0, 2490448, 5, 0, 2490449, 5, 0, 2490450, 5, 0, 2490451, 5, 0, 2424910, 5, 0, 2424911, 5, 0, 2424912, 5, 0, 2424913, 5, 0, 2424914, 5, 0, 2359375, 5, 0, 2359376, 5, 0, 2359377, 5, 0, 2293840, 5, 0, 1769550, 5, 0, 1769551, 5, 0, 1769552, 5, 0, 1769553, 5, 0, 1769554, 5, 0, 1835087, 4, 0, 1835088, 5, 0, 1835089, 5, 0, 1900624, 5, 0, 1769561, 5, 0, 1835097, 5, 0, 1900633, 5, 0, 1966169, 5, 0, 2031705, 5, 0, 2097241, 5, 0, 2162777, 5, 0, 2228313, 5, 0, 2293849, 5, 0, 2359385, 5, 0, 2424921, 5, 0, 2490457, 5, 0, 2555993, 5, 0, 2621529, 5, 0, 2687065, 5, 0, 2752601, 5, 0, 2818137, 5, 0, 1769562, 5, 0, 1835098, 5, 0, 1900634, 4, 0, 1966170, 5, 0, 2031706, 5, 0, 2097242, 5, 0, 2162778, 5, 0, 2228314, 5, 0, 2293850, 5, 0, 2359386, 5, 0, 2424922, 5, 0, 2490458, 5, 0, 2555994, 5, 0, 2621530, 5, 0, 2687066, 5, 0, 2752602, 5, 0, 2818138, 5, 0, 1638491, 5, 0, 1704027, 5, 0, 1769563, 5, 0, 1835099, 5, 0, 1900635, 4, 0, 1966171, 5, 0, 2031707, 5, 0, 2097243, 5, 0, 2162779, 5, 0, 2228315, 5, 0, 2293851, 5, 0, 2359387, 5, 0, 2424923, 5, 0, 2490459, 5, 0, 2555995, 5, 0, 2621531, 5, 0, 2687067, 5, 0, 2752603, 5, 0, 2818139, 5, 0, 1507420, 5, 0, 1572956, 5, 0, 1638492, 5, 0, 1704028, 4, 0, 1769564, 5, 0, 1835100, 5, 0, 1900636, 4, 0, 1966172, 5, 0, 2031708, 5, 0, 2097244, 5, 0, 2162780, 5, 0, 2228316, 5, 0, 2293852, 5, 0, 2359388, 5, 0, 2424924, 5, 0, 2490460, 5, 0, 2555996, 5, 0, 2621532, 5, 0, 2687068, 5, 0, 2752604, 5, 0, 2818140, 5, 0, 1441885, 5, 0, 1507421, 5, 0, 1572957, 4, 0, 1638493, 5, 0, 1704029, 5, 0, 1769565, 5, 0, 1835101, 5, 0, 1900637, 4, 0, 1966173, 5, 0, 2031709, 5, 0, 2097245, 5, 0, 2162781, 4, 0, 2228317, 5, 0, 2293853, 5, 0, 2359389, 5, 0, 2424925, 5, 0, 2490461, 4, 0, 2555997, 5, 0, 2621533, 5, 0, 2687069, 5, 0, 2752605, 5, 0, 2818141, 5, 0, 1376350, 5, 0, 1441886, 5, 0, 1507422, 5, 0, 1572958, 4, 0, 1638494, 5, 0, 1704030, 5, 0, 1769566, 5, 0, 1835102, 5, 0, 1900638, 5, 0, 1966174, 5, 0, 2031710, 5, 0, 2097246, 5, 0, 2162782, 4, 0, 2228318, 5, 0, 2293854, 5, 0, 2359390, 5, 0, 2424926, 4, 0, 2490462, 5, 0, 2555998, 5, 0, 2621534, 5, 0, 2687070, 5, 0, 2752606, 5, 0, 2818142, 5, 0, 1376351, 5, 0, 1441887, 5, 0, 1507423, 5, 0, 1572959, 4, 0, 1638495, 5, 0, 1704031, 5, 0, 1769567, 5, 0, 1835103, 5, 0, 1900639, 5, 0, 1966175, 5, 0, 2031711, 5, 0, 2097247, 5, 0, 2162783, 5, 0, 2228319, 5, 0, 2293855, 5, 0, 2359391, 5, 0, 2424927, 5, 0, 2490463, 5, 0, 2555999, 5, 0, 2621535, 5, 0, 2687071, 5, 0, 2752607, 5, 0, 2818143, 5, 0, 1376352, 5, 0, 1441888, 5, 0, 1507424, 4, 0, 1572960, 4, 0, 1638496, 5, 0, 1704032, 5, 0, 1769568, 5, 0, 1835104, 5, 0, 1900640, 5, 0, 1966176, 5, 0, 2031712, 5, 0, 2097248, 5, 0, 2162784, 5, 0, 2228320, 5, 0, 2293856, 5, 0, 2359392, 5, 0, 2424928, 5, 0, 2490464, 5, 0, 2556000, 5, 0, 2621536, 5, 0, 2687072, 5, 0, 2752608, 5, 0, 2818144, 5, 0, 1376353, 5, 0, 1441889, 5, 0, 1507425, 4, 0, 1572961, 5, 0, 1638497, 5, 0, 1704033, 5, 0, 1769569, 5, 0, 1835105, 5, 0, 1900641, 4, 0, 1966177, 5, 0, 2031713, 5, 0, 2097249, 5, 0, 2162785, 5, 0, 2228321, 5, 0, 2293857, 5, 0, 2359393, 5, 0, 2424929, 5, 0, 2490465, 5, 0, 2556001, 5, 0, 2621537, 4, 0, 2687073, 4, 0, 2752609, 5, 0, 2818145, 5, 0, 1376354, 5, 0, 1441890, 5, 0, 1507426, 5, 0, 1572962, 5, 0, 1638498, 5, 0, 1704034, 5, 0, 1769570, 5, 0, 1835106, 5, 0, 1900642, 5, 0, 1966178, 5, 0, 2031714, 5, 0, 2097250, 5, 0, 2162786, 5, 0, 2228322, 5, 0, 2293858, 5, 0, 2359394, 5, 0, 2424930, 5, 0, 2490466, 5, 0, 2556002, 5, 0, 2621538, 5, 0, 2687074, 5, 0, 2752610, 5, 0, 2818146, 5, 0, 1376355, 5, 0, 1441891, 5, 0, 1507427, 5, 0, 1572963, 5, 0, 1638499, 5, 0, 1704035, 5, 0, 1769571, 5, 0, 1835107, 5, 0, 1900643, 5, 0, 1966179, 5, 0, 2031715, 5, 0, 2097251, 5, 0, 2162787, 5, 0, 2228323, 5, 0, 2293859, 5, 0, 2359395, 5, 0, 2424931, 5, 0, 2490467, 5, 0, 2556003, 5, 0, 2621539, 5, 0, 2687075, 5, 0, 2752611, 5, 0, 2818147, 5, 0, 1376356, 5, 0, 1441892, 5, 0, 1507428, 5, 0, 1572964, 5, 0, 1638500, 4, 0, 1704036, 5, 0, 1769572, 5, 0, 1835108, 5, 0, 1900644, 5, 0, 1966180, 5, 0, 2031716, 5, 0, 2097252, 5, 0, 2162788, 5, 0, 2228324, 4, 0, 2293860, 5, 0, 2359396, 5, 0, 2424932, 5, 0, 2490468, 5, 0, 2556004, 5, 0, 2621540, 5, 0, 2687076, 5, 0, 2752612, 5, 0, 2818148, 5, 0, 1376357, 5, 0, 1441893, 5, 0, 1507429, 5, 0, 1572965, 5, 0, 1638501, 4, 0, 1704037, 5, 0, 1769573, 5, 0, 1835109, 5, 0, 1900645, 5, 0, 1966181, 5, 0, 2031717, 5, 0, 2097253, 5, 0, 2162789, 5, 0, 2228325, 5, 0, 2293861, 5, 0, 2359397, 5, 0, 2424933, 5, 0, 2490469, 5, 0, 2556005, 5, 0, 2621541, 5, 0, 2687077, 5, 0, 2752613, 5, 0, 2818149, 5, 0, 1376358, 5, 0, 1441894, 5, 0, 1507430, 5, 0, 1572966, 5, 0, 1638502, 5, 0, 1704038, 5, 0, 1769574, 5, 0, 1835110, 5, 0, 1900646, 5, 0, 1966182, 4, 0, 2031718, 5, 0, 2097254, 5, 0, 2162790, 5, 0, 2228326, 5, 0, 2293862, 5, 0, 2359398, 5, 0, 2424934, 5, 0, 2490470, 5, 0, 2556006, 5, 0, 2621542, 5, 0, 2687078, 5, 0, 2752614, 5, 0, 2818150, 5, 0, 1376359, 5, 0, 1441895, 5, 0, 1507431, 5, 0, 1572967, 5, 0, 1638503, 5, 0, 1704039, 5, 0, 1769575, 5, 0, 1835111, 5, 0, 1900647, 4, 0, 1966183, 4, 0, 2031719, 5, 0, 2097255, 5, 0, 2162791, 5, 0, 2228327, 5, 0, 2293863, 5, 0, 2359399, 5, 0, 2424935, 5, 0, 2490471, 5, 0, 2556007, 5, 0, 2621543, 5, 0, 2687079, 5, 0, 2752615, 5, 0, 2818151, 5, 0, 1376360, 5, 0, 1441896, 5, 0, 1507432, 5, 0, 1572968, 5, 0, 1638504, 5, 0, 1704040, 5, 0, 1769576, 5, 0, 1835112, 5, 0, 1900648, 5, 0, 1966184, 5, 0, 2031720, 5, 0, 2097256, 5, 0, 2162792, 5, 0, 2228328, 5, 0, 2293864, 5, 0, 2359400, 5, 0, 2424936, 5, 0, 2490472, 5, 0, 2556008, 5, 0, 2621544, 5, 0, 2687080, 5, 0, 2752616, 5, 0, 2818152, 5, 0, 105, 5, 0, 65641, 4, 0, 131177, 4, 0, 196713, 4, 0, 262249, 4, 0, 327785, 5, 0, 393321, 5, 0, 458857, 5, 0, 524393, 5, 0, 589929, 5, 0, 655465, 5, 0, 721001, 5, 0, 786537, 5, 0, 852073, 5, 0, 917609, 5, 0, 983145, 5, 0, 1048681, 5, 0, 1114217, 5, 0, 1179753, 5, 0, 1245289, 5, 0, 1310825, 5, 0, 1376361, 5, 0, 106, 5, 0, 65642, 5, 0, 131178, 5, 0, 196714, 5, 0, 262250, 5, 0, 327786, 5, 0, 393322, 5, 0, 458858, 5, 0, 524394, 5, 0, 589930, 4, 0, 655466, 4, 0, 721002, 4, 0, 786538, 4, 0, 852074, 5, 0, 917610, 5, 0, 983146, 5, 0, 1048682, 5, 0, 1114218, 5, 0, 1179754, 5, 0, 1245290, 5, 0, 1310826, 5, 0, 1376362, 5, 0, 1441897, 5, 0, 1507433, 5, 0, 1572969, 5, 0, 1638505, 5, 0, 1704041, 5, 0, 1769577, 5, 0, 1835113, 5, 0, 1900649, 5, 0, 1966185, 5, 0, 2031721, 5, 0, 2097257, 5, 0, 2162793, 5, 0, 2228329, 5, 0, 2293865, 5, 0, 2359401, 5, 0, 2424937, 5, 0, 2490473, 5, 0, 2556009, 5, 0, 2621545, 4, 0, 2687081, 5, 0, 2752617, 5, 0, 2818153, 5, 0, 1441898, 5, 0, 1507434, 5, 0, 1572970, 5, 0, 1638506, 5, 0, 1704042, 5, 0, 1769578, 5, 0, 1835114, 5, 0, 1900650, 5, 0, 1966186, 5, 0, 2031722, 5, 0, 2097258, 5, 0, 2162794, 5, 0, 2228330, 5, 0, 2293866, 5, 0, 2359402, 5, 0, 2424938, 5, 0, 2490474, 5, 0, 2556010, 5, 0, 2621546, 5, 0, 2687082, 5, 0, 2752618, 5, 0, 2818154, 5, 0, 1638490, 4, 0, 1704026, 4, 0, 983141, 7, 0)

[node name="Player" parent="TileMap" instance=ExtResource("1_0n3vm")]
position = Vector2(32, 560)

[node name="Camera2D" type="Camera2D" parent="TileMap/Player"]
zoom = Vector2(1.7, 1.7)
limit_left = 0
limit_top = 0
limit_right = 1700
limit_bottom = 650

[node name="questionblock" parent="TileMap" instance=ExtResource("7_kv5kr")]
position = Vector2(600, 371)

[node name="big_toad" parent="TileMap" instance=ExtResource("9_gc0ye")]
position = Vector2(128, 568)

[node name="big_toad2" parent="TileMap" instance=ExtResource("9_gc0ye")]
position = Vector2(792, 424)

[node name="big_toad3" parent="TileMap" instance=ExtResource("9_gc0ye")]
position = Vector2(840, 424)

[node name="big_toad4" parent="TileMap" instance=ExtResource("9_gc0ye")]
position = Vector2(888, 424)

[node name="big_toad5" parent="TileMap" instance=ExtResource("9_gc0ye")]
position = Vector2(1088, 424)

[node name="big_toad6" parent="TileMap" instance=ExtResource("9_gc0ye")]
position = Vector2(1088, 408)

[node name="big_toad7" parent="TileMap" instance=ExtResource("9_gc0ye")]
position = Vector2(1088, 392)

[node name="big_toad8" parent="TileMap" instance=ExtResource("9_gc0ye")]
position = Vector2(1088, 376)

[node name="Coin" parent="TileMap" instance=ExtResource("10_71yvd")]
position = Vector2(344, 472)
scale = Vector2(0.44531, 0.44531)

[node name="Coin2" parent="TileMap" instance=ExtResource("10_71yvd")]
position = Vector2(328, 456)
scale = Vector2(0.44531, 0.44531)

[node name="Coin3" parent="TileMap" instance=ExtResource("10_71yvd")]
position = Vector2(312, 440)
scale = Vector2(0.44531, 0.44531)

[node name="Coin4" parent="TileMap" instance=ExtResource("10_71yvd")]
position = Vector2(296, 440)
scale = Vector2(0.44531, 0.44531)

[node name="Coin5" parent="TileMap" instance=ExtResource("10_71yvd")]
position = Vector2(280, 440)
scale = Vector2(0.44531, 0.44531)

[node name="Coin6" parent="TileMap" instance=ExtResource("10_71yvd")]
position = Vector2(520, 424)
scale = Vector2(0.44531, 0.44531)

[node name="Coin7" parent="TileMap" instance=ExtResource("10_71yvd")]
position = Vector2(680, 424)
scale = Vector2(0.44531, 0.44531)

[node name="Coin18" parent="TileMap" instance=ExtResource("10_71yvd")]
position = Vector2(648, 424)
scale = Vector2(0.44531, 0.44531)

[node name="Coin19" parent="TileMap" instance=ExtResource("10_71yvd")]
position = Vector2(616, 424)
scale = Vector2(0.44531, 0.44531)

[node name="Coin20" parent="TileMap" instance=ExtResource("10_71yvd")]
position = Vector2(584, 424)
scale = Vector2(0.44531, 0.44531)

[node name="Coin21" parent="TileMap" instance=ExtResource("10_71yvd")]
position = Vector2(552, 424)
scale = Vector2(0.44531, 0.44531)

[node name="Coin22" parent="TileMap" instance=ExtResource("10_71yvd")]
position = Vector2(536, 408)
scale = Vector2(0.44531, 0.44531)

[node name="Coin23" parent="TileMap" instance=ExtResource("10_71yvd")]
position = Vector2(568, 408)
scale = Vector2(0.44531, 0.44531)

[node name="Coin24" parent="TileMap" instance=ExtResource("10_71yvd")]
position = Vector2(600, 408)
scale = Vector2(0.44531, 0.44531)

[node name="Coin25" parent="TileMap" instance=ExtResource("10_71yvd")]
position = Vector2(632, 408)
scale = Vector2(0.44531, 0.44531)

[node name="Coin26" parent="TileMap" instance=ExtResource("10_71yvd")]
position = Vector2(664, 408)
scale = Vector2(0.44531, 0.44531)

[node name="Coin8" parent="TileMap" instance=ExtResource("10_71yvd")]
position = Vector2(1216, 424)
scale = Vector2(0.44531, 0.44531)

[node name="Coin9" parent="TileMap" instance=ExtResource("10_71yvd")]
position = Vector2(1232, 424)
scale = Vector2(0.44531, 0.44531)

[node name="Coin10" parent="TileMap" instance=ExtResource("10_71yvd")]
position = Vector2(1248, 424)
scale = Vector2(0.44531, 0.44531)

[node name="Coin11" parent="TileMap" instance=ExtResource("10_71yvd")]
position = Vector2(1264, 424)
scale = Vector2(0.44531, 0.44531)

[node name="Coin12" parent="TileMap" instance=ExtResource("10_71yvd")]
position = Vector2(1280, 424)
scale = Vector2(0.44531, 0.44531)

[node name="Coin13" parent="TileMap" instance=ExtResource("10_71yvd")]
position = Vector2(1296, 424)
scale = Vector2(0.44531, 0.44531)

[node name="Coin14" parent="TileMap" instance=ExtResource("10_71yvd")]
position = Vector2(1312, 424)
scale = Vector2(0.44531, 0.44531)

[node name="Coin15" parent="TileMap" instance=ExtResource("10_71yvd")]
position = Vector2(1328, 424)
scale = Vector2(0.44531, 0.44531)

[node name="Coin16" parent="TileMap" instance=ExtResource("10_71yvd")]
position = Vector2(1344, 424)
scale = Vector2(0.44531, 0.44531)

[node name="Coin17" parent="TileMap" instance=ExtResource("10_71yvd")]
position = Vector2(1360, 424)
scale = Vector2(0.44531, 0.44531)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="bullets_container" parent="CanvasLayer" instance=ExtResource("8_fqhje")]
anchors_preset = 0
anchor_left = 0.0
anchor_right = 0.0
offset_left = 0.0
offset_right = 976.0
offset_bottom = 149.0
grow_horizontal = 1

[node name="coin_gui" parent="." instance=ExtResource("10_t73p1")]

[node name="interact" type="Area2D" parent="."]
position = Vector2(311, 857)

[node name="CollisionShape2D" type="CollisionShape2D" parent="interact"]
position = Vector2(801, -170)
shape = SubResource("RectangleShape2D_q8iaj")

[node name="transition" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="transition"]
position = Vector2(1624, 248)
shape = SubResource("CapsuleShape2D_4s4tg")

[node name="lv_3_bgm" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("13_cs7eh")
autoplay = true
max_distance = 10000.0

[connection signal="body_entered" from="interact" to="." method="_on_interact_body_entered"]
[connection signal="body_entered" from="transition" to="." method="_on_transition_body_entered"]
